--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,9 +43,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-size: 16px;
   flex-wrap: wrap;
   height: auto;
-  margin: 20px 72px 40px 72px;
+  margin: 40px 72px 40px 72px;
 }
 
 .nav__menu {
@@ -56,8 +57,8 @@ body {
 }
 
 .nav__link {
-  text-decoration: none;
   color: var(--color-menu);
+  text-decoration: none;
 }
 
 .nav__link:hover {
@@ -242,5 +243,34 @@ body {
   .section__paragraph-info {
     margin-block-end: 40px;
     max-width: 500px;
+  }
+}
+
+@media (max-width: 780px) {
+  .nav {
+    margin-inline: 18px;
+    flex-wrap: nowrap;
+  }
+  .nav__menu {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 640px) {
+  .nav__menu {
+    background-color: #fff;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    padding: 0;
+    width: 320px;
+  }
+
+  .nav__link {
+    color: var(--color-menu);
+    text-decoration: none;
   }
 }
