--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@
   --color-paragraph: #909193;
   --background-buttom: #2a4dd0;
   --text-buttom: #ffffff;
+  --fill: #111729;
 }
 
 :root[data-theme="dark"] {
@@ -23,13 +24,14 @@
   --color-menu: #909193;
   --color-switcher: #223344;
   --color-active: #f2f9fe;
-  --menu-active: #223344;
+  --menu-active: #fff;
   --color-text: #ffffff;
   --color-paragraph: #909193;
   --background-buttom: #2a4dd0;
   --text-buttom: #ffffff;
   --border-option: none;
   --transform-option: translateX(100%);
+  --fill: #f2f9fe;
 }
 
 body {
@@ -152,6 +154,7 @@ body {
   /* border: 1px solid red; */
   margin: 0 auto;
   margin-block-start: 40px;
+  margin-block-end: 40px;
   max-width: 90%;
 }
 
@@ -263,9 +266,14 @@ body {
 }
 
 @media (max-width: 780px) {
+  .hero {
+    /* border: 1px solid red; */
+    margin: 40px 32px 60px 32px;
+  }
   .nav {
     margin-inline: 18px;
     flex-wrap: nowrap;
+    width: 80%;
   }
   .nav__menu {
     gap: 20px;
@@ -287,23 +295,26 @@ body {
     background-color: var(--text-buttom);
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     justify-content: center;
     position: absolute;
     bottom: 0;
     top: 0;
     right: 0;
+    width: 60%;
   }
 
   .nav__menu {
     flex-direction: column;
     font-size: 2.5rem;
     gap: 2.5rem;
+    padding-top: 40px;
   }
 
   .nav__hamburguer {
     cursor: pointer;
     display: block;
+
     z-index: 1000;
   }
 
@@ -314,5 +325,30 @@ body {
     position: absolute;
     top: 0;
     right: 0;
+  }
+
+  .active {
+    color: #111729;
+  }
+
+  .nav__link:hover {
+    color: #111729;
+  }
+}
+
+@media (max-width: 490px) {
+  .hero {
+    /* border: 1px solid red; */
+    margin: 40px 16px 40px 16px;
+  }
+
+  .nav__menu {
+    flex-direction: column;
+    font-size: 1.5rem;
+    padding-top: 0px;
+  }
+
+  .section__description h1 {
+    font-size: 3rem;
   }
 }
